objects/disco__Check_In__c.object
<CustomObject>
    <description>Check in of a form during a visit</description>
    <fields>
        <fullName>disco__Active__c</fullName>
        <formula>NOT(ISNULL(disco__Check_In_Date_Time__c ))  &amp;&amp;  ISNULL( disco__Check_Out_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>disco__Check_In_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check In Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Check Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Check_In_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check In Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Check Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Check_In_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check In Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Check Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Check_In_Date_Time__c</fullName>
        <label>Check In Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco__Check_In_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check In Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Check Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Check_In_Location__c</fullName>
        <label>Check In Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>disco__Check_In_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check In Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Check Ins</relationshipLabel>
        <relationshipName>Check_Ins</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>disco__Check_Out_Date_Time__c</fullName>
        <label>Check Out Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>disco__Check_Out_Location__c</fullName>
        <label>Check Out Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>disco__Mobile_Id__c</fullName>
        <externalId>true</externalId>
        <label>Mobile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Check In</label>
    <listViews>
        <fullName>disco__All</fullName>
        <columns>NAME</columns>
        <columns>disco__Active__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>disco__Check_In_Date_Time__c</columns>
        <columns>disco__Check_Out_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Check In Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Ins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>